@@ -253,6 +253,7 @@ Several build profiles are understood and supported:
   produces only the linux-libc-dev package and has no host
   build-dependencies.
 - nodoc: Exclude most documentation
+- noudeb: Exclude installer udeb packages
 - pkg.linux.notools: Exclude userland tool packages (linux-kbuild-<version>,
   linux-perf-<version>, etc.)
 - pkg.linux.nokernel: Exclude kernel image and header packages
