@@ -1,6 +1,7 @@
 linux (5.10.179-2) UNRELEASED; urgency=medium
 
   * d/b/gencontrol.py: Add optional extra config dir debian/config.local
+  * d/b/gencontrol.py: Add support for noudeb build profile
 
  -- Ben Hutchings <benh@debian.org>  Mon, 19 Jun 2023 22:00:48 +0200
 
